[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "grikod"
version = "1.0.6"
license = {file = "LICENSE"}
authors = [
  { name="Mehmet Keçeci", email="mkececi@yaani.com" },
]
description = "İkili sayıları Gri Koda çevirir. Grikod (Gri Kod, Gray Code, Grey Code)"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["binary", "Gray code", "Gri Kod", "encoding"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]

[project.urls]
Homepage = "https://github.com/KuantumBS/grikod/"
