[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "grikod"
dynamic = ["version"]
license = {file = "LICENSE"}
authors = [
  { name="Mehmet Keçeci", email="mkececi@yaani.com" },
]
description = "İkili sayıları Gri Koda çevirir. Grikod (Gri Kod, Gray Code, Grey Code)"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["Gri Kod", "Encoding", "Binary", "Gray Code"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]

[tool.setuptools_scm]
version_file = "src/grikod/_version.py"  # Sürüm bilgisinin bulunduğu dosya
version_scheme = "post-release"  # Post-release sürüm şeması

[project.urls]
Homepage = "https://github.com/KuantumBS/grikod/"
