[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "grikod"
dynamic = ["version"]
license = {file = "LICENSE"}
authors = [
  { name="Mehmet Keçeci", email="mkececi@yaani.com" },
]
description = "Converts binary numbers to Gray Code. Grikod (Gray Code, Grey Code)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]
keywords = ["Gri Kod", "GriKod", "Gray Code", "Binary", "Encoding"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]

[tool.setuptools_scm]
version_file = "src/grikod/_version.py"  # Sürüm bilgisinin bulunduğu dosya
local_scheme = "no-local-version"

[project.urls]
Homepage = "https://github.com/KuantumBS/grikod/"
Documentation = "https://kuantumbs.github.io/grikod/"
Repository = "https://github.com/KuantumBS/grikod/"
Issues = "https://github.com/KuantumBS/grikod/issues"
